--- a/style.css
+++ b/style.css
@@ -57,22 +57,35 @@ header{
     box-shadow:0 0 30px rgb(73, 185, 250);
 }
 .authnav {
-    color: black;
-    margin-left: 5.5%;
+    margin-left: 4%;
     margin-top: 0.7%;
 }
 .authnav a{
     color: black;
-    border-radius: 12px;
+    border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.0);
     text-align: center;
-    padding: 0px 12px;
+    padding: 6px 15px;
     font-weight: bold;
+    margin: 0 5px;
 }
+
+.authnav a span{
+    color: #582c7e;;
+}
+
 .authnav a:hover{
-    color: black;
     border: 1px solid #fff;
     box-shadow:0 0 30px rgb(73, 185, 250);
+}
+
+.authnav .sign-up{
+    color: white;
+    background: linear-gradient(to bottom right, #582c7e, #6278ce);
+}
+
+.fa-right-to-bracket{
+    padding-right: 5px;
 }
 .languagenav{
     margin-left: 11.1%;
@@ -112,8 +125,12 @@ header{
 .background-buttons{
     display: grid;
     margin-top: 80px;
+    padding-bottom: 30px;
     justify-content: center;
-
+    background: url("images/blue-background.png") center;
+    background-repeat: no-repeat; 
+    background-position-y: 25px;
+    backface-visibility: 0.7;
 }
 .mid-buttons{
     display: flex;
@@ -174,6 +191,22 @@ main{
     font-family: 'Titillium Web', sans-serif;
     margin-top: 125px;
 }
+
+.list-links{
+    float: right;
+    margin-right: 2%;
+    margin-top: 150px;
+    font-size: 23px;
+}
+
+.list-links li{
+    list-style-type: none;
+}
+
+.list-links i{
+    color: #676766;
+}
+
 .adv__cards{
     display: grid;
     grid-template-columns: auto auto auto;
@@ -187,6 +220,40 @@ main{
     grid-template-rows: 20px 60px 100px;
     margin: 0 auto;
 }
+
+#first.adv__card.comp-info-with-border:after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: -180px;
+    height: 250px;
+    width: 1px;
+    background-color: #b9b9b9;
+}
+
+#second.adv__card.comp-info-with-border:after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: 0px;
+    height: 400px;
+    width: 1px;
+    background-color: #b9b9b9;
+}
+
+#third.adv__card.comp-info-with-border:after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: 0px;
+    width: 229px;
+    height: 1px;
+    background-color: #b9b9b9;
+}
+
 .adv__card img{
     grid-column: 1;
     grid-row: 2;
