--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ a{
 body{
     color: #858688;
     font-family: 'Titillium Web', sans-serif;
+    width: 1684px;
+    margin: 0 auto;
 }
 header{
     width: 100%;
@@ -82,6 +84,7 @@ header{
 .authnav .sign-up{
     color: white;
     background: linear-gradient(to bottom right, #582c7e, #6278ce);
+    box-shadow: 0 6px 16px #666da0;
 }
 
 .fa-right-to-bracket{
@@ -236,9 +239,9 @@ main{
     content: '';
     display: block;
     position: absolute;
-    left: 100%;
-    top: 0px;
-    height: 400px;
+    left: 99%;
+    top: 11px;
+    height: 413px;
     width: 1px;
     background-color: #b9b9b9;
 }
@@ -364,6 +367,7 @@ ul.footer-social{
     display: flex;
     justify-content: space-between;
     width: 550px;
+    border-right: 1px #b9b9b9 solid;
 }
 .company-info{
     display:block;
@@ -432,6 +436,7 @@ ul.footer-social{
     line-height: 0px;
     display: inline;
     white-space: pre;
+    padding-bottom: 60px;
 }
 
 .center-text-contaner {
@@ -460,6 +465,12 @@ ul.footer-social{
 .button-align {
     text-align: right;
     margin-right: 26%;
+}
+
+.button-align > hr {
+    position: relative;
+    top: 30px;
+    z-index: -1;
 }
 
 #jornals-img {
@@ -571,34 +582,22 @@ input[name="r"] {
 
  .gradient-wrap {
     overflow: hidden;
-    border: 2px red solid;
     position: absolute;
-    width: 100%;
-    height: 1500px;
+    top: 1760px;
+    width: 1684px;
+    height: 1200px;
     z-index: -1;
  }
 
- /* .gradient{
-    top: 100px;
-    background: linear-gradient(110deg,  rgb(181, 181, 181), rgb(255, 255, 255));
-    opacity: 0.5;
+ .gradient{
+    position: relative;
+    top: 64px;
+    height: 100%;
+    width: 150%;
+    background: linear-gradient(30deg, #fff 30%, #eee);
     z-index: -1;
-    top: 1549px;
-    height: 1400px;
-    width: 200%;
     transform: rotate(-6.4deg);
- } */
-
- /* .gradient {
-    position: absolute;
-    top: -239px;
-    left: -106px;
-    z-index: 0;
-    width: 1500px;
-    height: 2500px;
-    background: linear-gradient(110deg, #efefef, #f7f7f7 20%, #fff 50%, #fff);
-    transform: rotate(83.6deg);
- } */
+ }
 
  .computer {
     position: relative;
@@ -607,7 +606,7 @@ input[name="r"] {
  .computer > img {
     height: 640px;
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     top: -260px;
     left: 906px;
  }
@@ -639,14 +638,30 @@ input[name="r"] {
  }
 
  .black-buttons > div {
-    padding: 3px 0 0 10px;
+    padding: 3px 0 0 12px;
+    z-index: 1;
  }
 
- .fundamental  {
+.black-buttons img {
+    border-radius: 5px;
+}
+
+ .black-buttons img:hover {
+    box-shadow:0 0 30px black;
+ }
+
+ .fundamental-wrap  {
+    line-height: 37px;
+    width: 77%;
+    margin: 0 0 40px auto;
+    padding: 68px 0 0 40px;
+    border-top: 1px #b9b9b9 solid;
+    z-index: -1;
+ }
+
+ .fundamental {
+    width: 866px;
     text-align: center;
-    line-height: 38px;
-    margin: 70px auto 40px;
-    border: 3 px red solid;
  }
 
  .fundamental h3 {
@@ -654,12 +669,10 @@ input[name="r"] {
     font-weight: normal;
     color: #555;
     word-spacing: 3px;
-    border: 1 px red solid;
  }
 
  .fundamental p {
     font-size: 28px;
-    border: 1 px green solid;
  }
 
  .btn-contaner {
@@ -675,16 +688,19 @@ input[name="r"] {
  .violet-button {
     width: 236px;
     background: linear-gradient(to right, #646c92, 50%, #5f2f6a);
+    box-shadow: 0 6px 16px #666da0;
 }
 
  .blue-button {
     width: 160px;
     background: linear-gradient(to right, #39bbde, #5e7bea); 
+    box-shadow: 0 6px 16px #55a1a9;
 }
 
- .blue-button:hover {
+ .violet-button:hover, .blue-button:hover {
     border: 1px solid #fff;
-    box-shadow:0 0 30px rgb(73, 185, 250);
+    box-shadow: 0 0 30px rgb(73, 185, 250);
+    cursor: pointer;
  }
 
  .create img {
@@ -692,11 +708,21 @@ input[name="r"] {
  }
 
  .companies-contaner {
-    text-align: center;
+    width: 1334px;
+    border-right: 1px #b9b9b9 solid; 
+    border-top: 1px #b9b9b9 solid; 
+    text-align: right;
+    padding-bottom: 134px;
  }
 
- #companies-img {
-    /* position: relative; */
-    width: 974px;
-    height: 92px;
+ .companies-contaner > p {
+    font-size: 13px;
+    padding: 18px 18px 0 18px;
+ }
+
+ .companies-contaner > img {
+    position: relative;
+    right: 18px;
+    top: -3px;
+    background-color: transparent;
  }
