--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     font-family: 'Titillium Web', sans-serif;
     width: 1684px;
     margin: 0 auto;
+    /* overflow: hidden; */
 }
 header{
     width: 100%;
@@ -250,9 +251,9 @@ main{
     content: '';
     display: block;
     position: absolute;
-    left: 100%;
+    left: 83%;
     top: 0px;
-    width: 229px;
+    width: 182px;
     height: 1px;
     background-color: #b9b9b9;
 }
